--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.19",
     "pg": "^8.5.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/pg": "^7.14.7",
-    "@types/cors": "^2.8.9",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
